Parse policy URL with Uri first
Replace use of deprecated URL constructor, parse into RFC3986 URI format first.